fix(v0.2.0): dual-thumb slider for return max, white return-address input, fix stale mobile flight test